# TANGO

./: .gitignore  LICENSE.md  LICENSE_ko.md  Makefile  NOTICE.md  README.md  docker-compose.yml  kubernetes.yml  rebuild.sh  reinstall.sh  remove_all.sh
autonn/: Dockerfile  README.md  (+2 more)
autonn/autonn/: Dockerfile  Dockerfile.cu130  README.md  admin.py  apps.py  manage.py  models.py  pyproject.toml  requirements.txt  urls.py  views.py
autonn/autonn/autonn_core/: apps.py  models.py  serializers.py  urls.py  views.py
autonn/autonn/autonn_core/datasets/ChestXRay/: ChestXRay_dataset.yaml  kaggle.json
autonn/autonn/autonn_core/datasets/coco/: coco_dataset.yaml
autonn/autonn/autonn_core/datasets/coco128/: dataset.yaml
autonn/autonn/autonn_core/datasets/imagenet/: get_imagenet.sh  imagenet_dataset.yaml
autonn/autonn/autonn_core/datasets/voc/: get_voc.sh  voc_dataset.yaml
autonn/autonn/autonn_core/tango/hpo/: nni_hpo_tuner.py
autonn/autonn/autonn_core/tango/inference/: detection_app.py  horses.txt  libTango.py  param_replacement.json  reparameterize.py  resize_replace.json
autonn/autonn/autonn_core/tango/main/: __init__.py  deploy.py  detect.py  evolve.py  export.py  finetune.py  hyptune.py  param_replacement.json  resize_replace.json  search.py  select.py  test.py  train.py  train_aux.py  visualize.py
autonn/autonn/autonn_core/tangochat/: browser.py
autonn/autonn/config/: settings.py  urls.py
autonn/autonn/visualization/: package.json
autonn/autonn/visualization/public/: index.html
autonn/autonn/visualization/src/: App.js  InitialArch.js  NodeColor.js
(+2703 files in other folders)
