[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tango"
version = "0.1.0"
description = "TANGO models and utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "pandas >= 1.4.2",
    "matplotlib >= 3.5.1",
    "pyyaml >= 6.0",
    "opencv-python >= 4.7.0.72",
    "requests >= 2.28.0",
    "tqdm >= 4.65.0",
    "django >= 3.2.25",
    "seaborn >= 0.11.2",
]
authors = [{name = "TANGO Team"}]

[tool.setuptools]
package-dir = {"" = "autonn_core"}

[tool.setuptools.packages.find]
where = ["autonn_core"]
include = ["tango*"]
exclude = ["tangochat*"]
